internal/testdata/basic/service-templates/service5/deployment-node.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    lagoon.sh/prBaseBranch: pr-base
    lagoon.sh/prHeadBranch: pr-head
    lagoon.sh/prNumber: "123"
    lagoon.sh/version: v2.7.x
  creationTimestamp: null
  labels:
    app.kubernetes.io/instance: node
    app.kubernetes.io/managed-by: build-deploy-tool
    app.kubernetes.io/name: basic
    lagoon.sh/buildType: pullrequest
    lagoon.sh/environment: pr-123
    lagoon.sh/environmentType: production
    lagoon.sh/project: example-project
    lagoon.sh/service: node
    lagoon.sh/service-type: basic
    lagoon.sh/template: basic-0.1.0
  name: node
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: node
      app.kubernetes.io/name: basic
  strategy: {}
  template:
    metadata:
      annotations:
        lagoon.sh/configMapSha: abcdefg1234567890
        lagoon.sh/prBaseBranch: pr-base
        lagoon.sh/prHeadBranch: pr-head
        lagoon.sh/prNumber: "123"
        lagoon.sh/version: v2.7.x
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: node
        app.kubernetes.io/managed-by: build-deploy-tool
        app.kubernetes.io/name: basic
        lagoon.sh/buildType: pullrequest
        lagoon.sh/environment: pr-123
        lagoon.sh/environmentType: production
        lagoon.sh/project: example-project
        lagoon.sh/service: node
        lagoon.sh/service-type: basic
        lagoon.sh/template: basic-0.1.0
    spec:
      containers:
      - env:
        - name: LAGOON_GIT_SHA
          value: abcdefg123456
        - name: CRONJOBS
        envFrom:
        - configMapRef:
            name: lagoon-env
        image: harbor.example/example-project/pr-123/node@sha256:b2001babafaa8128fe89aa8fd11832cade59931d14c3de5b3ca32e2a010fbaa8
        livenessProbe:
          initialDelaySeconds: 60
          tcpSocket:
            port: 1234
          timeoutSeconds: 10
        name: basic
        ports:
        - containerPort: 1234
          name: tcp-1234
          protocol: TCP
        - containerPort: 8191
          name: tcp-8191
          protocol: TCP
        - containerPort: 9001
          name: udp-9001
          protocol: UDP
        readinessProbe:
          initialDelaySeconds: 1
          tcpSocket:
            port: 1234
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 10m
            memory: 100M
      enableServiceLinks: false
      imagePullSecrets:
      - name: lagoon-internal-registry-secret
      priorityClassName: lagoon-priority-production
status: {}
